--- a/src/app/components/film/film.component.scss
+++ b/src/app/components/film/film.component.scss
@@ -41,6 +41,11 @@
   font-size: 12px;
   line-height: 14px;
 }
+.actors {
+  margin: 0 20px;
+  font-size: 12px;
+  line-height: 14px;
+}
 
 .year {
   margin: 0 20px;
