--- a/src/app/components/film/film.component.css
+++ b/src/app/components/film/film.component.css
@@ -40,6 +40,12 @@
   line-height: 14px;
 }
 
+.actors {
+  margin: 0 20px;
+  font-size: 12px;
+  line-height: 14px;
+}
+
 .year {
   margin: 0 20px;
 }
