--- a/src/app/components/film/film.component.html
+++ b/src/app/components/film/film.component.html
@@ -3,6 +3,11 @@
     <img src="./app/stub/images/{{film.id}}.jpeg" [alt]="film.name" class="image"/>
   </div>
   <h2 class="film-name">{{film.name}}</h2>
-  <p class="genre">{{getFilmGenres(film)}}</p>
+  <div>
+    <p class="genre">{{getFilmGenres(film)}}</p>
+    <p class="actors">{{getFilmActors(film)}}</p>
+  </div>
+
+
   <p class="year">{{film.year}}</p>
 </div>
