--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -8,15 +8,16 @@
     <div class="film-info">
       <div class="film-info__name">{{film.name}}</div>
       <div class="film-info__genre">{{getFilmGenres(film)}}</div>
+      <div class="film-info__actor">{{getFilmActors(film)}}</div>
       <div class="film-info__year">{{film.year}}</div>
       <div class="film-info__description">{{film.description}}</div>
     </div>
     <div class="buttons">
-      <div (click)="likeDislikeHandler(film)"
+      <!-- <div (click)="likeDislikeHandler(film)"
            [ngClass]="{
         'buttons__like-button': !isLiked(film),
         'buttons__dislike-button': isLiked(film)
-      }">{{ isLiked(film) ? 'Dislike this film' : 'Like this film'}}</div>
+      }">{{ isLiked(film) ? 'Dislike this film' : 'Like this film'}}</div> -->
       <div class="buttons__close-button" (click)="modalService.close()">Close</div>
     </div>
   </div>
