--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -49,7 +49,7 @@
     font-weight: 600;
   }
 
-  &__genre, &__year {
+  &__genre, &__year, &__actor {
     font-size: 12px;
     line-height: 14px;
   }
