console warning fixes. High contast scheme for MsMocrosoft browser, minor fixes

--- a/src/app/components/film/film.component.scss
+++ b/src/app/components/film/film.component.scss
@@ -51,3 +51,10 @@
   margin: 0 20px;
 }
 
+@media (forced-colors: active) {
+  .film-card {
+    background-color: Canvas;
+    border-color: CanvasText;
+  }
+}
+
