--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,3 +48,10 @@
   margin-top: 40px;
   margin-bottom: 15px;
 }
+
+@media (forced-colors: active) {
+  .film-card {
+    background-color: Canvas;
+    border-color: CanvasText;
+  }
+}
