--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,6 +49,13 @@
   margin-bottom: 15px;
 }
 
+.no-results {
+  text-align: left;
+  font-size: 18px;
+  color: #777;
+  margin-top: 20px;
+}
+
 @media (forced-colors: active) {
   .film-card {
     background-color: Canvas;
