Fixed display of movie images.

--- a/src/app/components/film/film.component.html
+++ b/src/app/components/film/film.component.html
@@ -1,6 +1,6 @@
 <div class="film-card">
   <div class="image-wrapper">
-    <img src="./app/stub/images/{{film.id}}.jpeg" [alt]="film.name" class="image"/>
+    <img src="./app/stub/images/{{film.id}}.jpg" [alt]="film.name" class="image"/>
   </div>
   <h2 class="film-name">{{film.name}}</h2>
   <div>
