--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="image__wrapper">
-    <img src="./app/stub/images/{{film.id}}.jpeg" [alt]="film.name" class="image"/>
+    <img src="./app/stub/images/{{film.id}}.jpg" [alt]="film.name" class="image"/>
   </div>
   <div class="film">
     <div class="film-info">
